fix: change tearsheet height for 88px gap

--- a/packages/ibm-products-styles/src/components/Tearsheet/_tearsheet.scss
+++ b/packages/ibm-products-styles/src/components/Tearsheet/_tearsheet.scss
@@ -196,7 +196,7 @@ $motion-duration: $duration-moderate-02;
   .#{$block-class}__container {
     block-size: 100%;
     inset-block-start: auto;
-    max-block-size: calc(100% - #{$spacing-09});
+    max-block-size: calc(100% - (#{$spacing-11} + #{$spacing-03}));
   }
 
   &.#{$block-class}.#{$block-class}.#{$block-class}.#{$block-class}--has-slug
@@ -234,18 +234,24 @@ $motion-duration: $duration-moderate-02;
     .#{$block-class}__container:not(
       .#{$block-class}__container--mixed-size-stacking
     ) {
-    max-block-size: calc(100% - #{$spacing-09} + #{$spacing-05});
+    max-block-size: calc(
+      100% - (#{$spacing-11} + #{$spacing-03}) + #{$spacing-05}
+    );
   }
 
   &.#{$block-class}--stacked-1-of-3
     .#{$block-class}__container:not(
       .#{$block-class}__container--mixed-size-stacking
     ) {
-    max-block-size: calc(100% - #{$spacing-09} + (2 * #{$spacing-05}));
+    max-block-size: calc(
+      100% - (#{$spacing-11} + #{$spacing-03}) + (2 * #{$spacing-05})
+    );
   }
 
   .#{$block-class}__container--lower {
-    max-block-size: calc(100% - (#{$spacing-09} + #{$spacing-08}));
+    max-block-size: calc(
+      100% - ((#{$spacing-11} + #{$spacing-03}) + #{$spacing-08})
+    );
   }
 
   &.#{$block-class}--stacked-1-of-2
@@ -257,7 +263,8 @@ $motion-duration: $duration-moderate-02;
       .#{$block-class}__container--mixed-size-stacking
     ) {
     max-block-size: calc(
-      100% - (#{$spacing-09} + #{$spacing-08}) + #{$spacing-05}
+      100% - ((#{$spacing-11} + #{$spacing-03}) + #{$spacing-08}) +
+        #{$spacing-05}
     );
   }
 
@@ -266,7 +273,8 @@ $motion-duration: $duration-moderate-02;
       .#{$block-class}__container--mixed-size-stacking
     ) {
     max-block-size: calc(
-      100% - (#{$spacing-09} + #{$spacing-08}) + (2 * #{$spacing-05})
+      100% - ((#{$spacing-11} + #{$spacing-03}) + #{$spacing-08}) +
+        (2 * #{$spacing-05})
     );
   }
 
